discussion/kv_engine/173031/173031_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51295: Remove CM::checkpointDisposer

Originally used to handle Eager in prod code and Lazy in test code.

Change-Id: I8935bf270a4a1349b394b89a5f5945e4d7b5aea4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-04-08 07:22:42.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-08 08:13:11.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16524/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16524/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16524/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18298/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [48/93]: test chk manager rollback...Exceeded maximum wait time of 60000000us waiting for stat "ep_queue_size" to be 0 (last value:20) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18298/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18298/ )

Test exceeded the timeout:
[2022-04-08T07:38:42.006Z] /usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18298/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6179/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6179/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45115/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37896/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15459/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18632/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19328/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26706/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6239/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17394/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2022-04-08 09:16:09.000000000
Message: 
Patch Set 4: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-08 09:44:43.000000000
Message: 
Patch Set 4:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16538/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16538/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45115/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37896/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15459/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18312/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6193/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18632/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19328/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26706/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6239/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17394/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-04-08 10:13:19.000000000
Message: 
Patch Set 4: Verified+1

(1 comment)
File Comment: /PATCHSET_LEVEL -> Unrelated failure at http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-04-08 10:13:23.000000000
Message: 
Removed Code-Review-1 by <GERRIT_ACCOUNT_1000011>

----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-04-08 10:13:26.000000000
Message: 
Removed Verified-1 by <GERRIT_ACCOUNT_1000011>

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-08 10:27:56.000000000
Message: 
Patch Set 4: Verified+1

Build Successful 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45115/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37896/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15459/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18312/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6193/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18632/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19328/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26706/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6239/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17394/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16545/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
